# physics

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  imgui.ini
src/: CMakeLists.txt  Scene.cpp  Scene.hpp  main.cpp
src/PiratePhysics/: AABBTree.cpp  AABBTree.hpp  CMakeLists.txt  CollisionResolution.cpp  CollisionResolution.hpp  Constraint.cpp  Constraint.hpp  ConvexCollision.cpp  ConvexCollision.hpp  EPAAlgorithm.cpp  GJKAlgorithm.cpp  PositionBasedDynamics.cpp  PositionBasedDynamics.hpp  RigidBody.cpp  RigidBody.hpp  Voxelize.cpp  Voxelize.hpp
src/PiratePhysics/CollisionShapes/: BoxShape.cpp  BoxShape.hpp  CollisionShape.cpp  CollisionShape.hpp
src/basic/: CMakeLists.txt  Camera.cpp  Camera.hpp  Loader.cpp  Loader.hpp  Math.hpp  MeshBasic.cpp  MeshBasic.hpp  MeshBasicRender.cpp  MeshBasicRender.hpp  SceneBase.cpp  SceneBase.hpp  Shader.cpp  Shader.hpp
src/basic/GLADLib/: CMakeLists.txt  glad.c
src/basic/GLADLib/glad/: glad.h
src/basic/imguiGlfwOpenGL/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_glfw.hpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.hpp
src/phyLib/: BoxShape.cpp  BoxShape.hpp  CMakeLists.txt  CollisionResolution.cpp  CollisionResolution.hpp  CollisionShape.cpp  CollisionShape.hpp  ConvexCollision.cpp  ConvexCollision.hpp  ConvexShape.cpp  ConvexShape.hpp  EPAAlgorithm.cpp  GJKAlgorithm.cpp  PolyhedralConvexShape.cpp  PolyhedralConvexShape.hpp
src/shaders/: Solid.frag  Solid.vert  basic.frag  basic.vert  ceramic.frag  phong.frag  phong.vert
